Fix regression that broke widget set compilation in 7.7.1 (#20285)
The fix for

https://dev.vaadin.com/ticket/20262

broke widget set compilation on Windows, possibly only under certain circumstances

Change-Id: Ica559b9c7199014bf1a2babad29f53b083ff74a2